initialize value so we don't crash when changing language before typing

Thanks goes to: Franz Fellner
BUG:296501